<?xml version="1.0"?>
<package>
  <name>vesc-utils</name>
  <version>0.0.1</version>
  <description>
    Package containing utilities to test vesc sub-component are working.
  </description>

  <maintainer email="mousou2011@gmail.com">Mourad Souag</maintainer>
  <author email="mousou2011@gmail.com">Mourad Souag</author>
  <license>BSD</license>

  <!-- <url type="website">http://www.ros.org/wiki/vesc</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vesc_driver</run_depend>
  <run_depend>vesc_msgs</run_depend>
  <run_depend>vesc_ackermann</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>

</package>
